Small ChapterScreen refactor